--- a/CardioHealth/Onboarding/APHOnboarding.storyboard
+++ b/CardioHealth/Onboarding/APHOnboarding.storyboard
@@ -1654,6 +1654,9 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="48" id="QBt-4l-1eD"/>
                                                     </constraints>
+                                                    <connections>
+                                                        <action selector="permissionButtonTapped:" destination="JTo-7D-V7E" eventType="touchUpInside" id="nTQ-bz-4b1"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
