--- a/CardioHealth/TabBarControllers/Profile/APHProfile.storyboard
+++ b/CardioHealth/TabBarControllers/Profile/APHProfile.storyboard
@@ -376,7 +376,23 @@
                         <view key="tableFooterView" contentMode="scaleToFill" id="zTe-um-a1N">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MUR-hL-XW2">
+                                    <rect key="frame" x="16" y="11" width="205" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="UOd-Kc-aYo"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" red="0.85098039219999999" green="0.85098039219999999" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
                             <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="centerY" secondItem="MUR-hL-XW2" secondAttribute="centerY" constant="0.5" id="4lf-N2-Xrq"/>
+                                <constraint firstItem="MUR-hL-XW2" firstAttribute="leading" secondItem="zTe-um-a1N" secondAttribute="leading" constant="16" id="D6l-aJ-pJN"/>
+                                <constraint firstAttribute="trailing" secondItem="MUR-hL-XW2" secondAttribute="trailing" constant="99" id="rug-av-ojN"/>
+                            </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APCSwitchTableViewCell" id="OWG-SV-jq1" customClass="APCSwitchTableViewCell">
@@ -461,6 +477,9 @@
                     <navigationItem key="navigationItem" title="Settings" id="ybu-Bh-AkV"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="versionLabel" destination="MUR-hL-XW2" id="rwp-vK-bhZ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v7b-6V-dAK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
