--- a/CardioHealth/Onboarding/APHOnboarding.storyboard
+++ b/CardioHealth/Onboarding/APHOnboarding.storyboard
@@ -436,17 +436,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="jaY-GU-ouk" secondAttribute="centerX" id="178-qr-6Ma"/>
-                            <constraint firstAttribute="centerY" secondItem="jaY-GU-ouk" secondAttribute="centerY" constant="-19" id="2MM-nx-ENT"/>
-                            <constraint firstItem="249-q3-9uo" firstAttribute="top" secondItem="dZW-dR-J9a" secondAttribute="bottom" id="2TL-UR-whP"/>
-                            <constraint firstItem="A44-Q8-8gf" firstAttribute="leading" secondItem="6tO-Ot-S0z" secondAttribute="leadingMargin" id="79B-71-Huj"/>
-                            <constraint firstItem="dZW-dR-J9a" firstAttribute="leading" secondItem="6tO-Ot-S0z" secondAttribute="leadingMargin" constant="-16" id="MPj-b1-fky"/>
-                            <constraint firstAttribute="centerX" secondItem="A44-Q8-8gf" secondAttribute="centerX" id="U00-wE-Zun"/>
-                            <constraint firstAttribute="centerX" secondItem="Kvb-j0-Vy2" secondAttribute="centerX" constant="-0.5" id="dWK-gd-MYE"/>
-                            <constraint firstItem="A44-Q8-8gf" firstAttribute="trailing" secondItem="6tO-Ot-S0z" secondAttribute="trailingMargin" id="g0a-x8-o6g"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dZW-dR-J9a" secondAttribute="trailing" constant="-16" id="lii-Vp-Lnv"/>
-                            <constraint firstAttribute="centerY" secondItem="A44-Q8-8gf" secondAttribute="centerY" constant="33" id="q8k-Cv-vl0"/>
-                            <constraint firstAttribute="centerY" secondItem="Kvb-j0-Vy2" secondAttribute="centerY" constant="79.5" id="xrZ-EP-KdM"/>
+                            <constraint firstItem="249-q3-9uo" firstAttribute="top" secondItem="dZW-dR-J9a" secondAttribute="bottom" id="2ml-VK-PMO"/>
+                            <constraint firstAttribute="centerY" secondItem="jaY-GU-ouk" secondAttribute="centerY" constant="-19" id="8bb-Gq-bAf"/>
+                            <constraint firstItem="A44-Q8-8gf" firstAttribute="trailing" secondItem="6tO-Ot-S0z" secondAttribute="trailingMargin" id="MsP-Wc-Qon"/>
+                            <constraint firstAttribute="centerY" secondItem="Kvb-j0-Vy2" secondAttribute="centerY" constant="79.5" id="cvx-eV-GG1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dZW-dR-J9a" secondAttribute="trailing" constant="-16" id="eSS-Sv-BmB"/>
+                            <constraint firstAttribute="centerY" secondItem="A44-Q8-8gf" secondAttribute="centerY" constant="33" id="gFC-rV-As6"/>
+                            <constraint firstItem="A44-Q8-8gf" firstAttribute="leading" secondItem="6tO-Ot-S0z" secondAttribute="leadingMargin" id="heu-3f-zXp"/>
+                            <constraint firstAttribute="centerX" secondItem="A44-Q8-8gf" secondAttribute="centerX" id="ptl-BT-6VH"/>
+                            <constraint firstItem="dZW-dR-J9a" firstAttribute="leading" secondItem="6tO-Ot-S0z" secondAttribute="leadingMargin" constant="-16" id="rf9-hE-Tri"/>
+                            <constraint firstAttribute="centerX" secondItem="jaY-GU-ouk" secondAttribute="centerX" id="yMN-Gn-0pn"/>
+                            <constraint firstAttribute="centerX" secondItem="Kvb-j0-Vy2" secondAttribute="centerX" constant="-0.5" id="ys7-BR-Wn5"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Eligibility" id="fPe-aU-b8O"/>
