--- a/CardioHealth/TabBarControllers/Activities/APHActivities.storyboard
+++ b/CardioHealth/TabBarControllers/Activities/APHActivities.storyboard
@@ -51,7 +51,7 @@
                                         </label>
                                         <view tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9hL-IG-syV" customClass="APCConfirmationView">
                                             <rect key="frame" x="20" y="25" width="20" height="20"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="20" id="5iL-mW-Lho"/>
                                                 <constraint firstAttribute="height" constant="20" id="aDd-cl-Ko9"/>
