Apple-148 Get started button is the normal height now

--- a/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHFitnessTestIntroStepViewController.xib
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHFitnessTestIntroStepViewController.xib
@@ -27,17 +27,17 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIS-Re-7Fl">
-                    <rect key="frame" x="22" y="55" width="278" height="405"/>
+                    <rect key="frame" x="21.5" y="55" width="279" height="406"/>
                     <color key="backgroundColor" red="0.97647064920000004" green="0.90980398650000005" blue="0.20000001789999999" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="fIS-Re-7Fl" secondAttribute="height" multiplier="24:35" id="zTt-5z-xrG"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E1y-Bp-4si">
-                    <rect key="frame" x="0.0" y="464" width="320" height="40"/>
+                    <rect key="frame" x="0.0" y="440" width="320" height="64"/>
                     <color key="backgroundColor" red="0.75686281919999998" green="0.094117656349999995" blue="0.1294117719" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="E1y-Bp-4si" secondAttribute="height" multiplier="8:1" id="6MG-Ox-0AQ"/>
+                        <constraint firstAttribute="height" constant="64" id="uPd-yN-Mgw"/>
                     </constraints>
                     <state key="normal" title="Get Started">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -52,7 +52,7 @@
             <constraints>
                 <constraint firstItem="fIS-Re-7Fl" firstAttribute="top" secondItem="0SX-WE-cMJ" secondAttribute="bottom" constant="14" id="5Hi-19-lzS"/>
                 <constraint firstAttribute="trailing" secondItem="E1y-Bp-4si" secondAttribute="trailing" id="Drj-iX-duk"/>
-                <constraint firstItem="E1y-Bp-4si" firstAttribute="top" secondItem="fIS-Re-7Fl" secondAttribute="bottom" constant="4" id="E74-SK-VFV"/>
+                <constraint firstItem="E1y-Bp-4si" firstAttribute="top" secondItem="fIS-Re-7Fl" secondAttribute="bottom" constant="-21" id="E74-SK-VFV"/>
                 <constraint firstItem="0SX-WE-cMJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="EHg-Ja-gtF"/>
                 <constraint firstItem="E1y-Bp-4si" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Lrb-lg-3cX"/>
                 <constraint firstItem="0SX-WE-cMJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="OA1-GW-q93"/>
