Apple-140 Changed font color

--- a/CardioHealth/TasksAndSteps/APHFitnessTest/Summary/APHFitnessTestSummaryViewController.xib
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/Summary/APHFitnessTestSummaryViewController.xib
@@ -27,7 +27,7 @@
                         <constraint firstAttribute="width" secondItem="7At-o6-pZw" secondAttribute="height" multiplier="7:1" id="iHP-yC-eFj"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.62352941176470589" green="0.62352941176470589" blue="0.64313725490196083" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hsR-VW-WPf">
