--- a/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHFitnessTestIntroStepViewController.xib
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHFitnessTestIntroStepViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="APHFitnessTestIntroStepViewController">
             <connections>
+                <outlet property="getStartedButton" destination="E1y-Bp-4si" id="ovX-fF-4gf"/>
                 <outlet property="instructionsContainer" destination="fIS-Re-7Fl" id="qiI-Wd-M1t"/>
                 <outlet property="introHeadingCaption" destination="0SX-WE-cMJ" id="R0E-Qj-M6K"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -27,7 +28,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIS-Re-7Fl">
-                    <rect key="frame" x="21.5" y="55" width="279" height="406"/>
+                    <rect key="frame" x="22" y="55" width="279" height="406"/>
                     <color key="backgroundColor" red="0.97647064920000004" green="0.90980398650000005" blue="0.20000001789999999" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="fIS-Re-7Fl" secondAttribute="height" multiplier="24:35" id="zTt-5z-xrG"/>
