--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeResultsViewController.xib
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeResultsViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -12,6 +12,7 @@
                 <outlet property="estimatedLifetimeFactorLabel" destination="okj-eJ-Q8i" id="eSy-Dc-zup"/>
                 <outlet property="estimatedTenYearFactorLabel" destination="MaF-vo-Pwt" id="7jq-Oh-A1H"/>
                 <outlet property="heartAgeLabel" destination="qvF-II-BuA" id="Wdk-t9-BMX"/>
+                <outlet property="label3" destination="liK-lU-xrn" id="O0I-uv-iH6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
